[package]
name = "notionSSH"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
sha2 = "0.10"
rustls = { version = "0.21", default-features = false, features = ["logging"] }
webpki-roots = "0.25"
x509-parser = "0.15"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[dev-dependencies]
tempfile = "3"
